<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>app.packed</groupId>
    <artifactId>packed-root-pom</artifactId>
    <version>0.1-SNAPSHOT</version>
    <relativePath>..</relativePath>
  </parent>
  <artifactId>packed-modules-pom</artifactId>
  <packaging>pom</packaging>
  <name>Packed-Modules-Pom</name>
  <description>Packed Modules POM</description>
  
  <!-- ==================================================================== -->
  <modules>
    <module>packed</module>
    <module>packed-micro</module>
  </modules>
  
  <!-- ==================================================================== -->
  <properties>
    <!-- Locate the root directory of the multi-module build -->
    <root.dir>${project.basedir}/..</root.dir>
    
    <!-- Test Dependencies Versions -->
    <version.test.assertj>3.24.2</version.test.assertj>
    <version.test.junit>5.9.2</version.test.junit>
    <version.test.jmh>1.36</version.test.jmh>
    
    <!-- Pluging Versions -->
    <version.plugin.jacoco>0.8.8</version.plugin.jacoco>
  </properties>

  <!-- ==================================================================== -->
  <dependencyManagement>
    <dependencies>
      <!-- Packed -->
      <dependency>
        <groupId>app.packed</groupId>
        <artifactId>packed</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>app.packed</groupId>
        <artifactId>packed-devtools</artifactId>
        <version>${project.version}</version>
      </dependency>
    
      <!-- Testing -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${version.test.junit}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${version.test.assertj}</version>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-core</artifactId>
        <version>${version.test.jmh}</version>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-generator-annprocess</artifactId>
        <version>${version.test.jmh}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  
  <!-- ==================================================================== -->
  <build>
    <!-- <directory>${project.basedir}/target.tmp</directory> -->
    <plugins>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>19</source>
          <target>19</target>
          <compilerArgument>-Xlint:deprecation</compilerArgument>
          <compilerArgument>-Xlint:unchecked</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
        <!-- Surefire does not pickup static test classes, unless we have these excludes, see https://github.com/junit-team/junit5/issues/1377 
        <configuration>
          <excludes>
            <exclude/>
          </excludes>
        </configuration>
        
        Should be fixed with 2.22.2
        -->
      </plugin>

   
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <excludePackageNames>packed.*:*.internals.*:*.test.*:*.examples.*:</excludePackageNames>
          <additionalOptions>-tag "apiNote:a:API Note:" -tag "implSpec:a:Implementation Requirements:" -tag "implNote:a:Implementation Note:"</additionalOptions>
          <additionalparam>-Xdoclint:none</additionalparam>
         <additionalOptions>-Xdoclint:none</additionalOptions>
         <additionalJOption>-Xdoclint:none</additionalJOption>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>